--- a/packages/providers/providers.yaml
+++ b/packages/providers/providers.yaml
@@ -3287,6 +3287,8 @@ cloudflare:
             title: API Token
             description: The API token for your Cloudflare user or account
             secret: true
+            example: lGlHlGZN3iPR9z7CupZlMB3nzMpTCdfxeUPNj_pf
+            pattern: '^.{40}$'
 
 close:
     display_name: Close
